.... I hate having to give up
