# swagger.json
@@ -5,7 +5,7 @@
     "description": "Contacts Api",
     "version": "1.0.0"
   },
-    "host": "cse341-project2-qpcd.onrender.com",
+   "host": "cse341-project2-qpcd.onrender.com",
   "basePath": "/",
   "schemes": [
     "https"
@@ -30,12 +30,12 @@
           "monsters"
         ],
         "description": "",
-        "produces": [
-          "application/json"
-        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -44,44 +44,12 @@
           "monsters"
         ],
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "level": {
-                  "example": "any"
-                },
-                "size": {
-                  "example": "any"
-                },
-                "types": {
-                  "example": "any"
-                },
-                "healthPoints": {
-                  "example": "any"
-                },
-                "staminaPoints": {
-                  "example": "any"
-                },
-                "attentionPoints": {
-                  "example": "any"
-                },
-                "luckyPoints": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -95,9 +63,6 @@
           "monsters"
         ],
         "description": "",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
             "name": "id",
@@ -109,6 +74,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -123,44 +94,17 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "level": {
-                  "example": "any"
-                },
-                "size": {
-                  "example": "any"
-                },
-                "types": {
-                  "example": "any"
-                },
-                "healthPoints": {
-                  "example": "any"
-                },
-                "staminaPoints": {
-                  "example": "any"
-                },
-                "attentionPoints": {
-                  "example": "any"
-                },
-                "luckyPoints": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -181,8 +125,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -196,12 +143,12 @@
           "players"
         ],
         "description": "",
-        "produces": [
-          "application/json"
-        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -210,47 +157,12 @@
           "players"
         ],
         "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "level": {
-                  "example": "any"
-                },
-                "size": {
-                  "example": "any"
-                },
-                "species": {
-                  "example": "any"
-                },
-                "types": {
-                  "example": "any"
-                },
-                "healthPoints": {
-                  "example": "any"
-                },
-                "staminaPoints": {
-                  "example": "any"
-                },
-                "attentionPoints": {
-                  "example": "any"
-                },
-                "luckyPoints": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -264,9 +176,6 @@
           "players"
         ],
         "description": "",
-        "produces": [
-          "application/json"
-        ],
         "parameters": [
           {
             "name": "id",
@@ -278,6 +187,12 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -292,44 +207,17 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "level": {
-                  "example": "any"
-                },
-                "size": {
-                  "example": "any"
-                },
-                "types": {
-                  "example": "any"
-                },
-                "healthPoints": {
-                  "example": "any"
-                },
-                "staminaPoints": {
-                  "example": "any"
-                },
-                "attentionPoints": {
-                  "example": "any"
-                },
-                "luckyPoints": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -350,8 +238,11 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
